@@ -34,6 +34,7 @@
  * @library /test/lib
  * @run junit/othervm/native -Djdk.pollerMode=1 --enable-native-access=ALL-UNNAMED SelectorOps
  * @run junit/othervm/native -Djdk.pollerMode=2 --enable-native-access=ALL-UNNAMED SelectorOps
+ * @run junit/othervm/native -Djdk.pollerMode=3 --enable-native-access=ALL-UNNAMED SelectorOps
  */
 
 /*
@@ -253,7 +254,7 @@ class SelectorOps {
     }
 
     /**
-     * Test calling select with interrupt status set.
+     * Test calling select with interrupted status set.
      */
     @Test
     public void testInterruptBeforeSelect() throws Exception {
@@ -270,7 +271,7 @@ class SelectorOps {
     }
 
     /**
-     * Test calling select with interrupt status set and thread is pinned.
+     * Test calling select with interrupted status set and thread is pinned.
      */
     @Test
     public void testInterruptBeforeSelectWhenPinned() throws Exception {
